--- a/src/components/Homepage/About.astro
+++ b/src/components/Homepage/About.astro
@@ -4,23 +4,14 @@
 
     <div class="space-y-6">
       <p>
-        This project is led by <a href="https://relaycorp.io">Relaycorp</a> and funded by the <a
-          href="https://www.opentechfund.org/">Open Technology Fund</a
-        >
-        for use in <a href="https://letro.io">Letro</a>, but VeraId itself is completely agnostic of
-        Letro and Relaycorp.
+        This project is led by <a href="https://relaycorp.tech/">Relaycorp</a>, and we built it
+        initially thanks to funding from <a href="https://opentech.fund/">Open Technology Fund</a>.
       </p>
 
       <p>
-        We could've bundled it with Letro, but the core functionality is generic enough and so
-        widely applicable that it makes more sense to develop it independently. We also expect it to
-        play a crucial role in <a href="https://awala.org">Awala</a> in the future, such as when we support
-        <a href="https://awala.org/docs/concepts/message-broadcasting/">message broadcasting</a>.
-      </p>
-
-      <p>
-        The word vera is <a href="https://en.wikipedia.org/wiki/Vera">Ido</a> for authentic, and it's
-        pronounced VEH-rah (with a trilled R).
+        The word <em>vera</em> is <a href="https://www.idolinguo.org.uk/general.htm">Ido</a> for <em
+          >authentic</em
+        >, and it's pronounced VEH-rah (with a trilled R).
       </p>
     </div>
   </div>
