--- a/src/components/Homepage/Founder.astro
+++ b/src/components/Homepage/Founder.astro
@@ -14,22 +14,21 @@ import founderPortrait from "../../assets/founder-portrait.png";
 
       <div class="space-y-4">
         <p>
-          I designed VeraId to provide users of Letro, a secure alternative to email, with
-          offline-compatible user identifiers robust enough to withstand attacks by nation-state
-          actors.
+          I designed VeraId to provide <a href="https://letro.app/en/">Letro</a> users with offline-compatible
+          identifiers that are robust enough to withstand attacks by the nation-state actors that would
+          target some of them.
         </p>
 
         <p>
           VeraId evolved into its own project as its potential became clear. Its capacity for
           attributing content to user-friendly, customisable, decentralised user identifiers can
-          enhance existing systems and pave the way for a new generation of decentralised apps like <a
-            href="https://letro.app/en/">Letro</a
-          >.
+          enhance existing systems and pave the way for a new generation of decentralised apps like
+          Letro.
         </p>
 
         <div class="pt-2 space-y-1">
           <p class="font-bold text-white">Gus Narea.</p>
-          <p>CEO of Relaycorp, and former member of Auth0's core engineering team.</p>
+          <p>Founder of Relaycorp, and former member of Auth0's core engineering team.</p>
         </div>
       </div>
     </div>
