--- a/src/components/Homepage/Benefits.astro
+++ b/src/components/Homepage/Benefits.astro
@@ -6,30 +6,26 @@ import checkmarkIcon from "../../assets/icons/checkmark.svg?raw";
   <div
     class="flex flex-col md:flex-row justify-between items-start md:gap-16 gap-8 px-6 py-12 md:py-24 max-w-6xl mx-auto"
   >
-    <div class="max-w-sm text-sm md:text-base">
-      <h2 class="text-3xl sm:text-4xl md:text-6xl">Key benefits</h2>
-      <p class="mt-4">
-        Experience the advantages of our decentralized approach that puts security and usability
-        first
-      </p>
+    <div class="max-w-sm">
+      <h2 class="text-5xl font-mono font-bold">Key benefits</h2>
     </div>
 
     <ul class="space-y-8 text-sm md:text-lg">
       <li class="flex items-center gap-4">
         <div class="w-6 h-6 text-green-400 shrink-0" set:html={checkmarkIcon} />
-        <span>Secure and decentralised and more text to be added here</span>
+        <span>Extends battle-tested standards like DNSSEC, X.509 and CMS.</span>
       </li>
       <li class="flex items-center gap-4">
         <div class="w-6 h-6 text-green-400 shrink-0" set:html={checkmarkIcon} />
-        <span>User and developer friendly and more text to be added</span>
+        <span>Open protocol with open source reference implementations.</span>
       </li>
       <li class="flex items-center gap-4">
         <div class="w-6 h-6 text-green-400 shrink-0" set:html={checkmarkIcon} />
-        <span>Open standards and open source and more text to be added</span>
+        <span>As decentralised as DNS itself.</span>
       </li>
       <li class="flex items-center gap-4">
         <div class="w-6 h-6 text-green-400 shrink-0" set:html={checkmarkIcon} />
-        <span>Offline verification and more text to be added here</span>
+        <span>Signatures can be produced and verified offline.</span>
       </li>
     </ul>
   </div>
