--- a/src/components/Homepage/Hero.astro
+++ b/src/components/Homepage/Hero.astro
@@ -12,8 +12,8 @@
       authentication based on DNS
     </h1>
     <p class="text-md sm:text-xl md:text-2xl text-neutral-300 mx-auto max-w-4xl">
-      The decentralised protocol to securely attribute content to domain names — without the
-      Internet or passwords.
+      VeraId is a decentralised authentication protocol that securely attributes content to domain
+      names.
     </p>
   </div>
 </section>
