--- a/src/components/Homepage/HowItWorks.astro
+++ b/src/components/Homepage/HowItWorks.astro
@@ -19,14 +19,14 @@
       <p>
         Designing and implementing yet another auth protocol is not something we took lightly: We
         know it's hard to get them right and the consequences can be catastrophic. Unfortunately, no <a
-          href="https://en.wikipedia.org/wiki/Public_key_infrastructure"
+          href="/prior-art"
           class="text-green-400">existing technology satisfied our needs</a
         >.
       </p>
 
       <p>
         Watch the video below for a walk-through of the protocol and a demo of the <a
-          href="https://github.com/relaycorp/vera-id-prototype"
+          href="https://github.com/relaycorp/veraid-poc"
           class="text-green-400">prototype</a
         >.
       </p>
