--- a/src/components/Homepage/Hero.astro
+++ b/src/components/Homepage/Hero.astro
@@ -1,6 +1,6 @@
 ---
-import { Image } from 'astro:assets';
-import patternSvg from '../../assets/pattern.svg';
+import { Image } from "astro:assets";
+import patternSvg from "../../assets/pattern.svg";
 ---
 
 <section class="relative px-6 sm:pt-16 pt-8 md:pb-20 pb-12">
