--- a/src/components/TopNav.astro
+++ b/src/components/TopNav.astro
@@ -14,7 +14,7 @@ const navLinks = [
 ---
 
 <nav class="border-b border-neutral-800">
-  <div class="px-6 py-4 flex max-w-6xl mx-auto justify-between items-center">
+  <div class="px-4 sm:px-6 py-4 flex max-w-6xl mx-auto justify-between items-center">
     <!-- Logo -->
     <a href="/">
       <Image src={logoDark} alt="VeraId logo" width={120} height={120} />
