--- a/src/layouts/Page.astro
+++ b/src/layouts/Page.astro
@@ -24,17 +24,21 @@ const { title, description } = schema.parse(Astro.props.frontmatter ?? Astro.pro
 const articleClasses = [
   "mx-auto",
   "max-w-5xl",
-  "pt-16",
-  "pb-24",
-  "px-6",
+  "pt-8",
+  "sm:pt-16",
+  "pb-12",
+  "sm:pb-16",
+  "px-4",
+  "sm:px-6",
   "prose",
+  "text-sm",
+  "sm:text-base",
   "leading-normal",
   "font-['Inter']",
   "font-normal",
   "text-neutral-300",
-  "prose-lg",
   "prose-h1:mb-4",
-  "prose-h2:mt-12",
+  "prose-h2:mt-10",
   "prose-h2:mb-4",
   "prose-h3:text-2xl",
   "prose-h3:mt-10",
@@ -67,6 +71,12 @@ const articleClasses = [
   "prose-dl:text-neutral-400",
   "[&_dt]:text-white",
   "prose-img:w-full",
+  "prose-h1:text-white",
+  "prose-h2:text-white",
+  "prose-h3:text-white",
+  "prose-h4:text-white",
+  "prose-h5:text-white",
+  "prose-h6:text-white",
 ];
 ---
 
