--- a/src/components/Homepage/About.astro
+++ b/src/components/Homepage/About.astro
@@ -1,6 +1,6 @@
-<section class="px-6 py-12 md:py-16 bg-neutral-950 text-sm md:text-base">
+<section class="px-4 sm:px-6 py-12 md:py-16 bg-neutral-950 text-sm md:text-base">
   <div class="max-w-6xl mx-auto">
-    <h2 class="text-3xl sm:text-4xl md:text-6xl text-center mb-8">About</h2>
+    <h2 class="text-white text-3xl sm:text-4xl md:text-6xl text-center mb-8">About</h2>
 
     <div class="space-y-6">
       <p>
