--- a/src/components/Homepage/Benefits.astro
+++ b/src/components/Homepage/Benefits.astro
@@ -4,10 +4,10 @@ import checkmarkIcon from "../../assets/icons/checkmark.svg?raw";
 
 <section>
   <div
-    class="flex flex-col md:flex-row justify-between items-start md:gap-16 gap-8 px-6 py-12 md:py-24 max-w-6xl mx-auto"
+    class="flex flex-col md:flex-row justify-between items-start md:gap-16 gap-8 px-4 sm:px-6 py-12 md:py-24 max-w-6xl mx-auto"
   >
     <div class="max-w-sm">
-      <h2 class="text-5xl font-mono font-bold">Key benefits</h2>
+      <h2 class="text-3xl text-white sm:text-4xl md:text-6xl">Key benefits</h2>
     </div>
 
     <ul class="space-y-8 text-sm md:text-lg">
