--- a/src/components/Homepage/UseCases.astro
+++ b/src/components/Homepage/UseCases.astro
@@ -6,7 +6,7 @@ import decentralisedSystems from "../../assets/decentralised-systems.png";
 import offlineAuthentication from "../../assets/offline-authentication.png";
 ---
 
-<section class="px-4 sm:px-6 py-12 md:py-16 bg-neutral-950 text-sm md:text-base">
+<section class="px-4 sm:px-6 py-12 md:py-16 bg-neutral-900 text-sm md:text-base">
   <div class="max-w-6xl mx-auto">
     <h2
       id="use-cases"
@@ -27,7 +27,7 @@ import offlineAuthentication from "../../assets/offline-authentication.png";
       </div>
 
       <div class="space-y-2">
-        <Image src={documentSigning} alt="API Authentication icon" class="w-12 h-12" />
+        <Image src={apiAuthentication} alt="API Authentication icon" class="w-12 h-12" />
         <h3>Artefact signing</h3>
         <p class="text-gray-300">
           Sign documents, apps, libraries, or other files on behalf of a domain name, without
@@ -36,7 +36,7 @@ import offlineAuthentication from "../../assets/offline-authentication.png";
       </div>
 
       <div class="space-y-2">
-        <Image src={offlineAuthentication} alt="API Authentication icon" class="w-12 h-12" />
+        <Image src={apiAuthentication} alt="API Authentication icon" class="w-12 h-12" />
         <h3>Offline user authentication</h3>
         <p class="text-gray-300">
           Enable users of offline systems to authenticate with user-friendly, customisable
@@ -45,7 +45,7 @@ import offlineAuthentication from "../../assets/offline-authentication.png";
       </div>
 
       <div class="space-y-2">
-        <Image src={decentralisedSystems} alt="API Authentication icon" class="w-12 h-12" />
+        <Image src={apiAuthentication} alt="API Authentication icon" class="w-12 h-12" />
         <h3>Next-gen decentralised systems</h3>
         <p class="text-gray-300">
           VeraId enables systems that are hard to imagine today, like peer-to-peer web hosting with
