Update use cases section with correct image references

--- a/src/components/Homepage/Benefits.astro
+++ b/src/components/Homepage/Benefits.astro
@@ -12,7 +12,7 @@ import checkmarkIcon from "../../assets/icons/checkmark.svg?raw";
 
     <ul class="space-y-8 text-sm md:text-lg">
       <li class="flex items-center gap-4">
-        <div class="w-6 h-6 text-[green-400] shrink-0" set:html={checkmarkIcon} />
+        <div class="w-6 h-6 text-green-400 shrink-0" set:html={checkmarkIcon} />
         <span>Extends battle-tested standards like DNSSEC, X.509 and CMS.</span>
       </li>
       <li class="flex items-center gap-4">
