--- a/src/components/Homepage/Hero.astro
+++ b/src/components/Homepage/Hero.astro
@@ -12,7 +12,7 @@ import patternSvg from "../../assets/pattern.svg";
     />
   </div>
   <div class="relative max-w-6xl mx-auto text-center">
-    <h1 class="text-3xl sm:text-5xl md:text-7xl font-bold md:mb-8 mb-4 leading-tight">
+    <h1 class="text-3xl sm:text-5xl md:text-7xl md:mb-8 mb-4 leading-tight text-white">
       <span
         class="bg-gradient-to-r from-[#01FD93] via-[#87FFCC] to-[#D9FFEF] inline-block text-transparent bg-clip-text"
         >User- and developer-friendly</span
