--- a/src/components/Homepage/UseCases.astro
+++ b/src/components/Homepage/UseCases.astro
@@ -27,7 +27,7 @@ import offlineAuthentication from "../../assets/offline-authentication.png";
       </div>
 
       <div class="space-y-2">
-        <Image src={apiAuthentication} alt="API Authentication icon" class="w-12 h-12" />
+        <Image src={documentSigning} alt="API Authentication icon" class="w-12 h-12" />
         <h3>Artefact signing</h3>
         <p class="text-gray-300">
           Sign documents, apps, libraries, or other files on behalf of a domain name, without
@@ -36,7 +36,7 @@ import offlineAuthentication from "../../assets/offline-authentication.png";
       </div>
 
       <div class="space-y-2">
-        <Image src={apiAuthentication} alt="API Authentication icon" class="w-12 h-12" />
+        <Image src={offlineAuthentication} alt="API Authentication icon" class="w-12 h-12" />
         <h3>Offline user authentication</h3>
         <p class="text-gray-300">
           Enable users of offline systems to authenticate with user-friendly, customisable
@@ -45,7 +45,7 @@ import offlineAuthentication from "../../assets/offline-authentication.png";
       </div>
 
       <div class="space-y-2">
-        <Image src={apiAuthentication} alt="API Authentication icon" class="w-12 h-12" />
+        <Image src={decentralisedSystems} alt="API Authentication icon" class="w-12 h-12" />
         <h3>Next-gen decentralised systems</h3>
         <p class="text-gray-300">
           VeraId enables systems that are hard to imagine today, like peer-to-peer web hosting with
