--- a/src/components/Homepage/Benefits.astro
+++ b/src/components/Homepage/Benefits.astro
@@ -1,5 +1,7 @@
 ---
 import checkmarkIcon from "../../assets/icons/checkmark.svg?raw";
+
+const CheckIcon = `<div class="w-6 h-6 text-green-400 shrink-0">${checkmarkIcon}</div>`;
 ---
 
 <section>
@@ -12,19 +14,19 @@ import checkmarkIcon from "../../assets/icons/checkmark.svg?raw";
 
     <ul class="space-y-8 text-sm md:text-lg">
       <li class="flex items-center gap-4">
-        <div class="w-6 h-6 text-green-400 shrink-0" set:html={checkmarkIcon} />
+        <Fragment set:html={CheckIcon} />
         <span>Extends battle-tested standards like DNSSEC, X.509 and CMS.</span>
       </li>
       <li class="flex items-center gap-4">
-        <div class="w-6 h-6 text-green-400 shrink-0" set:html={checkmarkIcon} />
+        <Fragment set:html={CheckIcon} />
         <span>Open protocol with open source reference implementations.</span>
       </li>
       <li class="flex items-center gap-4">
-        <div class="w-6 h-6 text-green-400 shrink-0" set:html={checkmarkIcon} />
+        <Fragment set:html={CheckIcon} />
         <span>As decentralised as DNS itself.</span>
       </li>
       <li class="flex items-center gap-4">
-        <div class="w-6 h-6 text-green-400 shrink-0" set:html={checkmarkIcon} />
+        <Fragment set:html={CheckIcon} />
         <span>Signatures can be produced and verified offline.</span>
       </li>
     </ul>
