--- a/src/components/Homepage/Benefits.astro
+++ b/src/components/Homepage/Benefits.astro
@@ -1,30 +1,32 @@
 ---
 import checkmarkIcon from "../../assets/icons/checkmark.svg?raw";
+
+const CheckIcon = `<div class="w-6 h-6 text-green-400 shrink-0">${checkmarkIcon}</div>`;
 ---
 
 <section>
   <div
-    class="flex flex-col md:flex-row justify-between items-start md:gap-16 gap-8 px-6 py-12 md:py-24 max-w-6xl mx-auto"
+    class="flex flex-col md:flex-row justify-between items-start md:gap-16 gap-8 px-4 sm:px-6 py-12 md:py-24 max-w-6xl mx-auto"
   >
     <div class="max-w-sm">
-      <h2 class="text-5xl font-mono font-bold">Key benefits</h2>
+      <h2 class="text-3xl text-white sm:text-4xl md:text-6xl">Key benefits</h2>
     </div>
 
     <ul class="space-y-8 text-sm md:text-lg">
       <li class="flex items-center gap-4">
-        <div class="w-6 h-6 text-green-400 shrink-0" set:html={checkmarkIcon} />
+        <Fragment set:html={CheckIcon} />
         <span>Extends battle-tested standards like DNSSEC, X.509 and CMS.</span>
       </li>
       <li class="flex items-center gap-4">
-        <div class="w-6 h-6 text-green-400 shrink-0" set:html={checkmarkIcon} />
+        <Fragment set:html={CheckIcon} />
         <span>Open protocol with open source reference implementations.</span>
       </li>
       <li class="flex items-center gap-4">
-        <div class="w-6 h-6 text-green-400 shrink-0" set:html={checkmarkIcon} />
+        <Fragment set:html={CheckIcon} />
         <span>As decentralised as DNS itself.</span>
       </li>
       <li class="flex items-center gap-4">
-        <div class="w-6 h-6 text-green-400 shrink-0" set:html={checkmarkIcon} />
+        <Fragment set:html={CheckIcon} />
         <span>Signatures can be produced and verified offline.</span>
       </li>
     </ul>
