--- a/src/components/Homepage/About.astro
+++ b/src/components/Homepage/About.astro
@@ -4,8 +4,10 @@
 
     <div class="space-y-6">
       <p>
-        This project is led by <a href="https://relaycorp.tech/">Relaycorp</a>, and we built it
-        initially thanks to funding from <a href="https://opentech.fund/">Open Technology Fund</a>.
+        This project is led by <a href="https://relaycorp.tech/">Relaycorp</a>. We built it
+        initially thanks to funding from the <a href="https://opentech.fund/"
+          >Open Technology Fund</a
+        >.
       </p>
 
       <p>
