--- a/src/components/TopNav.astro
+++ b/src/components/TopNav.astro
@@ -13,11 +13,11 @@ const navLinks = [
 ];
 ---
 
-<nav class="border-b border-neutral-800">
-  <div class="px-4 sm:px-6 py-4 flex max-w-6xl mx-auto justify-between items-center">
+<nav class="border-b border-neutral-800 px-4 sm:px-6 py-4">
+  <div class="flex max-w-6xl mx-auto justify-between items-center">
     <!-- Logo -->
     <a href="/">
-      <Image src={logoDark} alt="VeraId logo" width={120} height={120} />
+      <Image src={logoDark} alt="VeraId logo" class="h-8 md:h-9 w-auto" />
     </a>
     <!-- Desktop navigation links -->
     <ul class="hidden md:flex space-x-12 text-white text-sm">
