--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -20,8 +20,10 @@ const relaycorpLinks = [
 const currentYear = new Date().getFullYear();
 ---
 
-<footer class="py-10 sm:py-16 mx-auto text-sm border-t border-neutral-800 bg-neutral-950">
-  <div class="max-w-6xl mx-auto px-4 sm:px-6">
+<footer
+  class="py-10 sm:py-16 px-4 sm:px-6 mx-auto text-sm border-t border-neutral-800 bg-neutral-950"
+>
+  <div class="max-w-6xl mx-auto">
     <div class="grid grid-cols-1 sm:grid-cols-[1fr_auto_auto] gap-8 sm:gap-24">
       <div class="space-y-4">
         <a href="/" class="block">
