--- a/src/components/Homepage/Benefits.astro
+++ b/src/components/Homepage/Benefits.astro
@@ -4,9 +4,9 @@ import checkmarkIcon from "../../assets/icons/checkmark.svg?raw";
 const CheckIcon = `<div class="w-6 h-6 text-green-400 shrink-0">${checkmarkIcon}</div>`;
 ---
 
-<section>
+<section class="px-4 sm:px-6 py-12 md:py-16">
   <div
-    class="flex flex-col md:flex-row justify-between items-start md:gap-16 gap-8 px-4 sm:px-6 py-12 md:py-24 max-w-6xl mx-auto"
+    class="flex flex-col md:flex-row justify-between items-start md:gap-16 gap-8 max-w-6xl mx-auto"
   >
     <div class="max-w-sm">
       <h2 class="text-3xl text-white sm:text-4xl md:text-6xl">Key benefits</h2>
