--- a/src/components/Homepage/Hero.astro
+++ b/src/components/Homepage/Hero.astro
@@ -21,8 +21,7 @@ import patternSvg from "../../assets/pattern.svg";
       authentication based on DNS
     </h1>
     <p class="text-md sm:text-xl md:text-2xl text-neutral-300 mx-auto max-w-4xl">
-      VeraId is a decentralised authentication protocol that securely attributes content to domain
-      names.
+      VeraId is a decentralised protocol that securely attributes content to domain names.
     </p>
   </div>
 </section>
