--- a/src/components/Homepage/Founder.astro
+++ b/src/components/Homepage/Founder.astro
@@ -7,9 +7,9 @@ import founderPortrait from "../../assets/founder-portrait.png";
   <div class="max-w-6xl mx-auto">
     <h2 class="text-3xl text-white sm:text-4xl md:text-6xl text-center mb-8">Founder's note</h2>
 
-    <div class="flex flex-col md:flex-row md:gap-16 gap-8 items-center">
-      <div class="w-full overflow-hidden">
-        <Image src={founderPortrait} alt="" class="w-full h-full object-cover" />
+    <div class="flex flex-col md:flex-row gap-8 items-center">
+      <div class="w-full overflow-hidden flex justify-center md:justify-start">
+        <Image src={founderPortrait} alt="" class="object-cover" />
       </div>
 
       <div class="space-y-4">
