--- a/src/components/Homepage/Hero.astro
+++ b/src/components/Homepage/Hero.astro
@@ -35,6 +35,7 @@ import audioGif from "../../assets/audio.gif";
       <!-- Carousel -->
       <div class="mt-6 md:mt-14 relative overflow-hidden w-full">
         <div class="carousel-scroll flex gap-8 items-center" id="carousel">
+          <!-- First set -->
           <div class="flex gap-8 sm:gap-16 items-center min-w-max pr-4 sm:pr-8">
             <Image src={microsoftImg} alt="Microsoft" class="h-24 w-auto object-contain" />
             <Image src={xkcdImg} alt="XKCD" class="h-24 w-auto object-contain" />
@@ -51,9 +52,11 @@ import audioGif from "../../assets/audio.gif";
             <Image src={bbcImg} alt="BBC" class="h-30 w-auto object-contain" />
             <Image src={winterImg} alt="Winter" class="h-24 w-auto object-contain" />
           </div>
-          <div class="flex gap-8 sm:gap-16 items-center min-w-max">
-            <Image src={xkcdImg} alt="XKCD" class="h-24 w-auto object-contain" />
+          <!-- Second set (identical to first) -->
+          <div class="flex gap-8 sm:gap-16 items-center min-w-max pr-4 sm:pr-8">
             <Image src={microsoftImg} alt="Microsoft" class="h-24 w-auto object-contain" />
+            <Image src={xkcdImg} alt="XKCD" class="h-24 w-auto object-contain" />
+            <Image src={gandalfImg} alt="Gandalf" class="h-24 w-auto object-contain" />
             <div class="relative">
               <Image src={spotifyImg} alt="Spotify" class="h-24 w-auto object-contain" />
               <Image
@@ -62,9 +65,8 @@ import audioGif from "../../assets/audio.gif";
                 class="absolute top-1/2 left-1/2 -translate-x-[53%] -translate-y-1/2"
               />
             </div>
-            <Image src={gandalfImg} alt="Gandalf" class="h-24 w-auto object-contain" />
-            <Image src={bbcImg} alt="BBC" class="h-30 w-auto object-contain" />
             <Image src={chewbaccaImg} alt="Chewbacca" class="h-24 w-auto object-contain" />
+            <Image src={bbcImg} alt="BBC" class="h-30 w-auto object-contain" />
             <Image src={winterImg} alt="Winter" class="h-24 w-auto object-contain" />
           </div>
         </div>
@@ -113,7 +115,7 @@ import audioGif from "../../assets/audio.gif";
     });
   }
 
-  // Keep click/tap functionality for mobile
+  // Tap functionality for mobile
   carousel?.addEventListener("click", () => {
     isPaused = !isPaused;
     carousel.classList.toggle("carousel-paused", isPaused);
